# ragdaemon

./: .gitignore  README.md  app.py  call_graph.py  pyproject.toml  pytest.ini  requirements.txt  tutorial.ipynb
.github/workflows/: run-tests.yml
ragdaemon/: __main__.py  app.py  call_graph.py  cerebrus.py  context.py  daemon.py  database.py  errors.py  generate_graph.py  get_paths.py  graph.py  io.py  llm.py  locate.py  position_nodes.py  render_context.py  utils.py
ragdaemon/annotators/: __init__.py  base_annotator.py  call_graph.py  chunker.py  chunker_line.py  chunker_llm.py  clusterer_binary.py  comment.py  diff.py  hierarchy.py  layout_callgraph.py  layout_hierarchy.py  layout_tsne.py  summarizer.py  summarizer_agglomerative.py  summarizer_iter.py
ragdaemon/annotators/chunker/: __init__.py  chunk_astroid.py  chunk_line.py  chunk_llm.py  utils.py
ragdaemon/database/: __init__.py  chroma_database.py  database.py  lite_database.py  pg_database.py  postgres.py
ragdaemon/io/: __init__.py  docker_io.py  file_like.py  local_io.py
ragdaemon/prompts/: call_graph.toml  cerebrus.txt  chunk_llm.toml  chunker_llm.toml  locate.toml
ragdaemon/prompts/summarizer/: base.txt  chunk.txt  directory.txt  file.txt  root.txt
ragdaemon/prompts/summarizer_iter/: chunk.txt  directory.txt  file.txt  root.txt  user.txt
ragdaemon/static/js/: controlPanel.js  main.js
ragdaemon/static/js/three/: camera.js  controls.js  edge.js  link.js  node.js  raycaster.js  renderer.js  scene.js
ragdaemon/templates/: index.html  search_results.html
ragdaemon/treesitter/: __init__.py  build_treesitter.py  parser.py  python_parser.py  setup.py
ragdaemon/viz/: force_directed.py
static/js/: main.js
templates/: index.html
tests/: conftest.py  test_async_behavior.py  test_call_graph.py  test_comments.py  test_context.py  test_daemon.py  test_database.py  test_docker_io.py  test_get_paths.py  test_io.py  test_render_context.py  test_sample.py
tests/annotators/: conftest.py  test_chunker.py  test_chunker_llm.py  test_comments.py  test_diff.py  test_hierarchy.py  test_layout_hierarchy.py  test_summarizer.py  test_summarizer_iter.py
tests/annotators/data/: chunker_graph.json  hierarchy_graph.json  layout_hierarchy_graph.json
tests/data/: chunker_graph.json  context_message.txt  diff_graph.json  hard_to_chunk.txt  hierarchy_graph.json  layout_hierarchy_graph.json  summarizer_graph.json  summarizer_iter_graph.json
tests/sample/: .gitignore  README.md  main.py
tests/sample/src/: interface.py  operations.py
