[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["ragdaemon"]

[project]
name = "ragdaemon"
version = "0.1.1"
description = "Generate and render a call graph for a Python project."
readme = "README.md"
dependencies = [
    "chromadb==0.4.24",
    "fastapi==0.109.2",
    "Jinja2==3.1.3",
    "networkx==3.2.1",
    "spiceai==0.1.8",
    "starlette==0.36.3",
    "tqdm==4.66.2",
    "uvicorn==0.27.1",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AbanteAI/ragdaemon"

[project.scripts]
ragdaemon = "ragdaemon.__main__:run"
