[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["ragdaemon"]

[project]
name = "ragdaemon"
version = "0.2.11"
description = "Generate and render a call graph for a Python project."
readme = "README.md"
dependencies = [
    "chromadb==0.4.24",
    "dict2xml==1.7.5",
    "fastapi==0.109.2",
    "Jinja2==3.1.3",
    "networkx==3.2.1",
    "spiceai~=0.2.0",
    "starlette==0.36.3",
    "tqdm==4.66.2",
    "uvicorn==0.29.0",
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AbanteAI/ragdaemon"

[project.scripts]
ragdaemon = "ragdaemon.__main__:run"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pytest",
    "pytest-asyncio"
]
